<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".content_main"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_logs"
        android:id="@+id/textView_call_log"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:clickable="true"
        android:contextClickable="true"
        android:singleLine="false"
        android:textColor="#090909"
        android:textColorHighlight="#c20003"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/textView_location"
        android:textSize="20sp"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:contextClickable="true"
        android:layout_below="@+id/textView_dictionary"
        android:layout_alignLeft="@+id/textView_dictionary"
        android:layout_alignStart="@+id/textView_dictionary"
        android:textColor="#030303" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_logs"
        android:id="@+id/textView_messages"
        android:onClick="onClick"
        android:clickable="true"
        android:textSize="20sp"
        android:contextClickable="true"
        android:layout_below="@+id/textView_call_log"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#030303" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browsing_history"
        android:textSize="20sp"
        android:id="@+id/textView_history"
        android:fontFamily="bookman old style"
        android:onClick="onClick"
        android:clickable="true"
        android:contextClickable="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_messages"
        android:layout_alignLeft="@+id/textView_messages"
        android:layout_alignStart="@+id/textView_messages"
        android:textColor="#030303" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary"
        android:textSize="20sp"
        android:id="@+id/textView_dictionary"
        android:fontFamily="bookman old style"
        android:onClick="onClick"
        android:clickable="true"
        android:contextClickable="true"
        android:layout_below="@+id/textView_history"
        android:layout_alignLeft="@+id/textView_call_log"
        android:layout_alignStart="@+id/textView_call_log"
        android:layout_marginTop="20dp"
        android:textColor="#030303" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_child"
        android:onClick="onClick"
        android:clickable="true"
        android:id="@+id/textView_add_child"
        android:layout_below="@+id/textView_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#030303" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/phone"
        android:id="@+id/imageView_call"
        android:layout_alignTop="@+id/textView_call_log"
        android:layout_toLeftOf="@+id/textView_messages"
        android:layout_toStartOf="@+id/textView_messages"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/message"
        android:id="@+id/imageView_message"
        android:layout_above="@+id/textView_history"
        android:layout_alignLeft="@+id/imageView_call"
        android:layout_alignStart="@+id/imageView_call" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        android:id="@+id/imageView_location"
        android:layout_alignBottom="@+id/textView_location"
        android:layout_alignRight="@+id/imageView_message"
        android:layout_alignEnd="@+id/imageView_message" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_browse"
        android:src="@drawable/browser"
        android:layout_alignTop="@+id/textView_history"
        android:layout_alignRight="@+id/imageView_message"
        android:layout_alignEnd="@+id/imageView_message" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_dictionary"
        android:src="@drawable/dictionary"
        android:layout_alignTop="@+id/textView_dictionary"
        android:layout_alignLeft="@+id/imageView_message"
        android:layout_alignStart="@+id/imageView_message" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_add"
        android:src="@drawable/add"
        android:layout_alignTop="@+id/textView_add_child"
        android:layout_alignRight="@+id/imageView_dictionary"
        android:layout_alignEnd="@+id/imageView_dictionary" />

</RelativeLayout>